--- a/DockerFile
+++ b/DockerFile
@@ -1,18 +1,25 @@
+# Étape 1 : build Maven
 FROM maven:3.8.7-eclipse-temurin-17 AS build
 
 WORKDIR /app
 COPY . .
 
+# Build du projet Java en ignorant les tests
 RUN mvn clean package -DskipTests
 
+# Étape 2 : image finale pour exécution
 FROM eclipse-temurin:17-jre-alpine
 
 WORKDIR /app
 
+# Copier le JAR du build précédent
 COPY --from=build /app/target/*.jar app.jar
 
+# Variable d'environnement pour le mot de passe DB
 ENV DB_PASSWORD=""
 
+# Exposer le port de l'application
 EXPOSE 8080
 
+# Commande pour lancer l'application
 ENTRYPOINT ["java", "-jar", "app.jar"]
