--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,21 +22,21 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      # 3️⃣ Build Maven dans le dossier api
+      # 3️⃣ Build Maven dans le dossier src/api
       - name: Build Maven
-        working-directory: api
+        working-directory: src/api
         run: mvn clean package -DskipTests
 
       # 4️⃣ Login GHCR
       - name: Login to GHCR
         run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      # 5️⃣ Build Docker (contexte = api)
+      # 5️⃣ Build Docker (contexte = src/api)
       - name: Build Docker image
         run: |
           IMAGE_NAME=ghcr.io/YanniB/Tp4MaintenanceLogiciel
           COMMIT_TAG=$(git rev-parse --short HEAD)
-          docker build -t $IMAGE_NAME:$COMMIT_TAG api
+          docker build -t $IMAGE_NAME:$COMMIT_TAG src/api
 
       # 6️⃣ Push Docker
       - name: Push Docker image
