--- a/src/api/pom.xml
+++ b/src/api/pom.xml
@@ -10,13 +10,26 @@
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.3.2</version>
+		<relativePath/>
+	</parent>
+
 	<properties>
 		<java.version>17</java.version>
-		<maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
 		<lombok.version>1.18.30</lombok.version>
+		<maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
 	</properties>
 
 	<dependencies>
+		<!-- Spring Boot starter -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -24,17 +37,11 @@
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<!-- Exemple Spring Boot dependencies (à adapter si nécessaire) -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-			<!-- Compiler plugin pour Java 17 -->
+			<!-- Compiler plugin pour Java 17 + Lombok -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -50,7 +57,7 @@
 				</configuration>
 			</plugin>
 
-			<!-- Spring Boot Maven Plugin (si tu utilises Spring Boot) -->
+			<!-- Spring Boot plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
