--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       # 1️⃣ Checkout du code
-      - name: Checkout code
+      - name: Checkout du code
         uses: actions/checkout@v3
 
-      # 2️⃣ Setup Java 17
+      # 2️⃣ Installer Java 17
       - name: Setup JDK 17
         uses: actions/setup-java@v3
         with:
@@ -29,16 +29,16 @@ jobs:
 
       # 4️⃣ Login GHCR
       - name: Login to GHCR
-        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+        run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      # 5️⃣ Build Docker image (multi-stage Dockerfile)
+      # 5️⃣ Build Docker (contexte = api)
       - name: Build Docker image
         run: |
           IMAGE_NAME=ghcr.io/YanniB/Tp4MaintenanceLogiciel
           COMMIT_TAG=$(git rev-parse --short HEAD)
           docker build -t $IMAGE_NAME:$COMMIT_TAG api
 
-      # 6️⃣ Push Docker image
+      # 6️⃣ Push Docker
       - name: Push Docker image
         run: |
           IMAGE_NAME=ghcr.io/YanniB/Tp4MaintenanceLogiciel
