--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,33 +12,33 @@ jobs:
 
     steps:
       # 1️⃣ Checkout du code
-      - name: Checkout du code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2️⃣ Installer Java 17
+      # 3️⃣ Installer Java 17
       - name: Setup JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # 3️⃣ Build Maven dans le dossier api
+      # 4️⃣ Build Maven
       - name: Build Maven
-        working-directory: api
+        working-directory: src/api
         run: mvn clean package -DskipTests
 
-      # 4️⃣ Login GHCR
+      # 5️⃣ Login GHCR
       - name: Login to GHCR
         run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      # 5️⃣ Build Docker (contexte = api)
+      # 6️⃣ Build Docker
       - name: Build Docker image
         run: |
           IMAGE_NAME=ghcr.io/YanniB/Tp4MaintenanceLogiciel
           COMMIT_TAG=$(git rev-parse --short HEAD)
-          docker build -t $IMAGE_NAME:$COMMIT_TAG api
+          docker build -t $IMAGE_NAME:$COMMIT_TAG src/api
 
-      # 6️⃣ Push Docker
+      # 7️⃣ Push Docker
       - name: Push Docker image
         run: |
           IMAGE_NAME=ghcr.io/YanniB/Tp4MaintenanceLogiciel
