--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,6 +15,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 2️⃣ Vérifier la structure
+      - name: Vérifier dossier src/api
+        run: |
+          if [ ! -d "src/api" ]; then
+            echo "Erreur : dossier src/api introuvable !"
+            exit 1
+          else
+            echo "Dossier src/api trouvé ✅"
+          fi
+
       # 3️⃣ Installer Java 17
       - name: Setup JDK 17
         uses: actions/setup-java@v3
@@ -34,13 +44,13 @@ jobs:
       # 6️⃣ Build Docker
       - name: Build Docker image
         run: |
-          IMAGE_NAME=ghcr.io/YanniB/Tp4MaintenanceLogiciel
+          IMAGE_NAME=ghcr.io/yannib/tp4maintenancelogiciel
           COMMIT_TAG=$(git rev-parse --short HEAD)
           docker build -t $IMAGE_NAME:$COMMIT_TAG src/api
 
       # 7️⃣ Push Docker
       - name: Push Docker image
         run: |
-          IMAGE_NAME=ghcr.io/YanniB/Tp4MaintenanceLogiciel
+          IMAGE_NAME=ghcr.io/yannib/tp4maintenancelogiciel
           COMMIT_TAG=$(git rev-parse --short HEAD)
           docker push $IMAGE_NAME:$COMMIT_TAG
