--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,43 +12,33 @@ jobs:
 
     steps:
       # 1️⃣ Checkout du code
-      - name: Checkout code
+      - name: Checkout du code
         uses: actions/checkout@v3
 
-      # 2️⃣ Vérifier la structure
-      - name: Vérifier dossier src/api
-        run: |
-          if [ ! -d "src/api" ]; then
-            echo "Erreur : dossier src/api introuvable !"
-            exit 1
-          else
-            echo "Dossier src/api trouvé ✅"
-          fi
-
-      # 3️⃣ Installer Java 17
+      # 2️⃣ Installer Java 17
       - name: Setup JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # 4️⃣ Build Maven
+      # 3️⃣ Build Maven dans le dossier api
       - name: Build Maven
         working-directory: src/api
         run: mvn clean package -DskipTests
 
-      # 5️⃣ Login GHCR
+      # 4️⃣ Login GHCR
       - name: Login to GHCR
         run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      # 6️⃣ Build Docker
+      # 5️⃣ Build Docker (contexte = src/api)
       - name: Build Docker image
         run: |
           IMAGE_NAME=ghcr.io/yannib/tp4maintenancelogiciel
           COMMIT_TAG=$(git rev-parse --short HEAD)
           docker build -t $IMAGE_NAME:$COMMIT_TAG src/api
 
-      # 7️⃣ Push Docker
+      # 6️⃣ Push Docker
       - name: Push Docker image
         run: |
           IMAGE_NAME=ghcr.io/yannib/tp4maintenancelogiciel
