--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,9 +35,8 @@ jobs:
       - name: Login to GHCR (GitHub Container Registry)
         uses: docker/login-action@v2
         with:
-          # Utiliser 'github.actor' (le nom d'utilisateur qui a déclenché l'action)
+          registry: ghcr.io
           username: ${{ github.actor }}
-          # Utiliser votre PAT stocké comme Secret de dépôt.
           password: ${{ secrets.GHCR_TOKEN }}
 
       # 5️⃣ Build Docker (contexte = src/api)
@@ -57,6 +56,5 @@ jobs:
 
       # 6️⃣ Push Docker
       - name: Push Docker image
-        # Utilise les variables de l'étape précédente
         run: |
           docker push ${{ steps.docker_build.outputs.IMAGE_NAME }}:${{ steps.docker_build.outputs.COMMIT_TAG }}
