--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,15 +38,16 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
+          # L'authentification utilise la casse correcte (Yanni-b) via github.actor
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }} # <-- RETOUR AU PAT MANUEL
+          password: ${{ secrets.GHCR_TOKEN }}
 
       # 5️⃣ Build Docker (contexte = src/api)
       - name: Build Docker image
         id: docker_build
         run: |
-          # Nom d'utilisateur exact : Yanni-b
-          IMAGE_NAME=ghcr.io/Yanni-b/tp4maintenancelogiciel
+          # CORRECTION CLÉ : Le tag Docker DOIT être en minuscules (yanni-b)
+          IMAGE_NAME=ghcr.io/${{ toLower(github.repository_owner) }}/tp4maintenancelogiciel
           COMMIT_TAG=$(git rev-parse --short HEAD)
           
           # Ajoute les tags pour le build
