--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,10 +45,13 @@ jobs:
       # 5️⃣ Build Docker (contexte = src/api)
       - name: Build Docker image
         id: docker_build
+        # Définition de l'URL dans une variable d'environnement (env)
+        # où la fonction 'lower' est garantie d'être évaluée correctement.
+        env:
+          IMAGE_FULL_NAME: ghcr.io/${{ lower(github.actor) }}/tp4maintenancelogiciel
         run: |
-          # CORRECTION CLÉ : Utilisation de la fonction 'lower' (au lieu de 'toLower')
-          # et utilisation de 'github.actor' pour le nom d'utilisateur
-          IMAGE_NAME=ghcr.io/${{ lower(github.actor) }}/tp4maintenancelogiciel
+          # CORRECTION CLÉ : Utilisation de la variable d'environnement évaluée
+          IMAGE_NAME=$IMAGE_FULL_NAME
           COMMIT_TAG=$(git rev-parse --short HEAD)
           
           # Ajoute les tags pour le build
