--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,16 +3,14 @@ name: CI/CD - Build & Push Docker
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
+    runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
-
-    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout du code
@@ -21,29 +19,29 @@ jobs:
       - name: Setup JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: 17
 
       - name: Build Maven
         working-directory: src/api
         run: mvn clean package -DskipTests
 
-      - name: Login to GHCR (GitHub Container Registry)
+      - name: Login to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
         id: docker_build
         run: |
-          IMAGE_NAME=ghcr.io/yanni-b/tp4maintenancelogiciel
+          IMAGE_NAME=ghcr.io/${{ github.repository }}
           COMMIT_TAG=$(git rev-parse --short HEAD)
-          
+
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
           echo "COMMIT_TAG=$COMMIT_TAG" >> $GITHUB_OUTPUT
-          
+
           docker build -t $IMAGE_NAME:$COMMIT_TAG src/api
 
       - name: Push Docker image
