--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -36,7 +40,7 @@ jobs:
       - name: Build Docker image
         id: docker_build
         run: |
-          IMAGE_NAME=ghcr.io/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          IMAGE_NAME=ghcr.io/${{ github.repository }}
           COMMIT_TAG=$(git rev-parse --short HEAD)
 
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_OUTPUT
