--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,47 +1,19 @@
-name: CI/CD - Build & Push Docker
-
-on:
-  push:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
-  packages: write
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: write
+# ... (Les autres parties restent les mêmes, y compris permissions: packages: write) ...
 
     steps:
-      - name: Checkout du code
-        uses: actions/checkout@v3
-
-      - name: Setup JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 17
-
-      - name: Build Maven
-        working-directory: src/api
-        run: mvn clean package -DskipTests
+      # ... (Checkout, Setup JDK, Build Maven) ...
 
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.actor }} # Utilisateur qui exécute l'action
+          password: ${{ secrets.CR_PAT }} # 🛑 LE NOUVEAU SECRET AVEC LE PAT
 
-      - name: Build Docker image 
+      - name: Build Docker image # (La correction de la casse est conservée)
         id: docker_build
         run: |
           LOWERCASE_REPO=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          
           IMAGE_NAME=ghcr.io/$LOWERCASE_REPO
           COMMIT_TAG=$(git rev-parse --short HEAD)
 
