--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,19 +1,53 @@
-# ... (Les autres parties restent les mêmes, y compris permissions: packages: write) ...
+name: CI/CD - Build & Push Docker
+
+on:
+  push:
+    branches: [ "main" ]
+
+# Définir les permissions au niveau du workflow (bonne pratique)
+permissions:
+  contents: read
+  packages: write
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    # Définir les permissions au niveau du job (essentiel)
+    permissions:
+      contents: read
+      packages: write
 
     steps:
-      # ... (Checkout, Setup JDK, Build Maven) ...
+      - name: Checkout du code
+        uses: actions/checkout@v3
+
+      - name: Setup JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: Build Maven
+        working-directory: src/api
+        run: mvn clean package -DskipTests
 
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }} # Utilisateur qui exécute l'action
-          password: ${{ secrets.CR_PAT }} # 🛑 LE NOUVEAU SECRET AVEC LE PAT
+          username: ${{ github.actor }}
+          # 🛑 MODIFICATION CLÉ : Utiliser un PAT avec le scope 'write:packages'
+          # Assurez-vous d'avoir créé le secret 'CR_PAT' dans les paramètres de votre dépôt.
+          password: ${{ secrets.CR_PAT }} 
 
-      - name: Build Docker image # (La correction de la casse est conservée)
+      - name: Build Docker image
         id: docker_build
         run: |
+          # 💡 CORRECTION CONSERVÉE : Convertir le nom du dépôt en minuscules
+          # pour respecter la règle de nommage Docker (qui était l'erreur précédente).
           LOWERCASE_REPO=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          
           IMAGE_NAME=ghcr.io/$LOWERCASE_REPO
           COMMIT_TAG=$(git rev-parse --short HEAD)
 
