--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [ "main" ]
 
-# Définir les permissions au niveau du workflow (bonne pratique)
 permissions:
   contents: read
   packages: write
@@ -13,7 +12,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    # Définir les permissions au niveau du job (essentiel)
     permissions:
       contents: read
       packages: write
@@ -41,9 +39,8 @@ jobs:
 
       - name: Build Docker image
         id: docker_build
-        run: |.
+        run: |
           LOWERCASE_REPO=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          
           IMAGE_NAME=ghcr.io/$LOWERCASE_REPO
           COMMIT_TAG=$(git rev-parse --short HEAD)
 
@@ -51,7 +48,6 @@ jobs:
           echo "COMMIT_TAG=$COMMIT_TAG" >> $GITHUB_OUTPUT
 
           docker build -t $IMAGE_NAME:$COMMIT_TAG src/api
-
 
       - name: Push Docker image
         run: |
